try fix order insert reject

--- a/visualization/template/templ.html
+++ b/visualization/template/templ.html
@@ -33,17 +33,17 @@
         
                 myLChart.setOption(option); 
 
-                var myKChart = ec.init(document.getElementById('kstandardChart')); 
+                // var myKChart = ec.init(document.getElementById('kstandardChart')); 
                 
-                var option2 = ${option2}
+                // var option2 = $option2}
 
-                myKChart.setOption(option2); 
+                // myKChart.setOption(option2); 
         
-                var myALChart = ec.init(document.getElementById('volumeChart')); 
+                // var myALChart = ec.init(document.getElementById('volumeChart')); 
                 
-                var option3 = ${option3}
+                // var option3 = $option3}
 
-                myALChart.setOption(option3); 
+                // myALChart.setOption(option3); 
             }
         );
     </script>
