--- a/android_client/res/layout/activity_account.xml
+++ b/android_client/res/layout/activity_account.xml
@@ -16,32 +16,30 @@
             android:id="@+id/back"
             android:layout_width="65.83dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
             android:text="返回"
             android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/login_title"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Trader"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/trade"
             android:layout_width="65.83dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"
             android:text="交易"
             android:textColor="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="30dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -49,26 +47,26 @@
         <TextView
             android:id="@+id/account_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="30dip"
             android:layout_weight="1"
             android:gravity="center"
             android:text="账户："
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/account_val"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="30dip"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="30dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -76,26 +74,26 @@
         <TextView
             android:id="@+id/balance_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="可用金额："
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/balance_val"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="30dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -103,54 +101,54 @@
         <TextView
             android:id="@+id/position_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="可用金额："
+            android:text="当前仓位："
             android:textColor="#ffffff"
-            android:textSize="20dip" />
-        
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/instrument_val"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
-        
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/position_val"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
-        
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/price_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="当前价："
+            android:text="成本价："
             android:textColor="#ffffff"
-            android:textSize="20dip" />   
-                 
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/price_val"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="30dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -158,22 +156,22 @@
         <TextView
             android:id="@+id/instruments_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="可选合约："
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
 
         <Spinner
             android:id="@+id/instrument_List"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="30dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -181,16 +179,17 @@
         <TextView
             android:id="@+id/strategy_label"
             android:layout_width="wrap_content"
-            android:layout_height="50dip"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="可选策略："
             android:textColor="#ffffff"
-            android:textSize="20dip" />
+            android:textSize="20sp" />
 
         <Spinner
             android:id="@+id/strategy_list"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
+
 </LinearLayout>
