--- a/android_client/res/layout/activity_login.xml
+++ b/android_client/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="40dp"
         android:background="@drawable/bg_title"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
@@ -38,7 +38,7 @@
             android:text="登录"
             android:textColor="#ffffff" />
     </LinearLayout>
-
+ 
     <RelativeLayout
         android:id="@+id/editRel"
         android:layout_width="fill_parent"
@@ -69,6 +69,7 @@
                 android:layout_marginLeft="20dip"
                 android:layout_toRightOf="@id/account"
                 android:hint="账户"
+                android:text="021510"
                 android:textSize="15sp" />
         </RelativeLayout>
 
@@ -98,6 +99,7 @@
                 android:layout_toRightOf="@id/pwd"
                 android:hint="密码"
                 android:password="true" 
+                android:text="wodemima"
                 android:textSize="15sp" />
         </RelativeLayout>
 
@@ -126,6 +128,7 @@
                 android:layout_marginLeft="20dip"
                 android:layout_toRightOf="@id/brokerId"
                 android:hint="brokerId"
+                android:text="9999"
                 android:textSize="15sp" />
         </RelativeLayout>
 
@@ -154,6 +157,7 @@
                 android:layout_marginLeft="20dip"
                 android:layout_toRightOf="@id/host_label"
                 android:hint="127.0.0.1"
+                android:text="10.0.2.2"
                 android:textSize="15sp" />
         </RelativeLayout>
 
@@ -182,6 +186,7 @@
                 android:layout_marginLeft="20dip"
                 android:layout_toRightOf="@id/port_label"
                 android:hint="2007"
+                android:text="2007"
                 android:textSize="15sp" />
         </RelativeLayout>
     </RelativeLayout>
