--- a/android_client/res/layout/activity_account.xml
+++ b/android_client/res/layout/activity_account.xml
@@ -184,25 +184,35 @@
         
 
     </RelativeLayout>
-
+    
+    <Button
+        android:id="@+id/CheckMessage"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_title"
+        android:padding="3dp"
+        android:text="查看消息"
+        android:textColor="#ffffff"
+        android:textSize="15sp" />
+    
     <Button
         android:id="@+id/ReleaseCtp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_title"
-        android:padding="8dp"
+        android:padding="3dp"
         android:text="关闭CTP账户"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/LogOut"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_title"
-        android:padding="8dp"
+        android:padding="3dp"
         android:text="退出"
         android:textColor="#ffffff"
-        android:textSize="25sp" />
+        android:textSize="15sp" />
 
 </LinearLayout>
