--- a/android_client/res/layout/activity_listview.xml
+++ b/android_client/res/layout/activity_listview.xml
@@ -38,8 +38,8 @@
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" >
         <!-- android:divider="@drawable/dividerimage" -->
     </ListView>
 
