--- a/android_client/res/layout/trade_listview_item.xml
+++ b/android_client/res/layout/trade_listview_item.xml
@@ -5,43 +5,56 @@
     android:descendantFocusability="afterDescendants"
     android:orientation="vertical" >
 
-    <!-- 博文题目 -->
-    <TextView
-        android:id="@+id/entity_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:lines="1"
-        android:textColor="#0000FF"
-        android:textStyle="bold" >
-    </TextView>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="2dp"
         android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/entity_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/instrumentLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="合约："
+            android:textColor="#ffffff" >
+        </TextView>
 
         <TextView
             android:id="@+id/instrument_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:lines="3" >
+            android:textColor="#ffffff" >
         </TextView>
-        
+
+        <TextView
+            android:id="@+id/directionLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="买卖方向："
+            android:textColor="#ffffff" >
+        </TextView>
+
         <TextView
             android:id="@+id/direction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
-            android:lines="3" >
+            android:textColor="#ffffff" >
         </TextView>
     </LinearLayout>
 
-    <!-- 作者昵称和发布日期 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,20 +64,41 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/last_price"
-            android:layout_width="80dp"
+            android:id="@+id/lastpriceLabel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#0000FF" >
+            android:layout_marginLeft="2dp"
+            android:text="价格："
+            android:textColor="#ffffff" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/last_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/volumeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="手："
+            android:textColor="#ffffff" >
         </TextView>
 
         <TextView
             android:id="@+id/volume"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TextView>　    
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
     </LinearLayout>
-    
-      <LinearLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
@@ -73,16 +107,39 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/order_ref"
-            android:layout_width="80dp"
+            android:id="@+id/orderRefLabel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#0000FF" >
+            android:layout_marginLeft="2dp"
+            android:text="报单编号："
+            android:textColor="#ffffff" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/order_ref"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
+
+        <TextView
+            android:id="@+id/occurTimeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:text="交易时间："
+            android:textColor="#ffffff" >
         </TextView>
 
         <TextView
             android:id="@+id/occur_time"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </TextView>　    
-    </LinearLayout>  
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
+
+    </LinearLayout>
+
 </LinearLayout>
