add push msg  of cancel_order to client

--- a/android_client/res/layout/trade_listview_item.xml
+++ b/android_client/res/layout/trade_listview_item.xml
@@ -53,6 +53,14 @@
             android:layout_marginLeft="2dp"
             android:textColor="#ffffff" >
         </TextView>
+        
+        <TextView
+            android:id="@+id/offsetFlag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:textColor="#ffffff" >
+        </TextView>
     </LinearLayout>
 
     <LinearLayout
